# Simple-Test-Framework

./: CMakeLists.txt  README.md
examples/RangeSum/: CMakeLists.txt  RangeSum.cpp  RangeSum.h  test.cpp
include/: ColorCodes.h  TestFramework.h  TestMacros.h  TestRegistry.h
src/: TestRegistry.cpp
